--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
     "@types/react": "18.2.48",
